fixed brief contrast warning

--- a/src/components/organisms/forms/extendedContactForm/Navigation/styles.module.scss
+++ b/src/components/organisms/forms/extendedContactForm/Navigation/styles.module.scss
@@ -74,7 +74,7 @@
       font-size: clamp(1rem, calc(16vw/10.24), 1.25rem);
       font-weight: 700;
 
-      color: #5B5F67;
+      color: var(--neutral-650);
       transition: background .3s var(--easing);
     }
 
